--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.24.0",
     "express": "^4.17.1"
   }
 }
