--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.10.2",
     "@types/node": "^16.11.11",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
